feat: add projection future
